<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_add_new"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_new"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_backup"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/reload_questions"
        app:showAsAction="never"/>

</menu>